# agentic-profile-matching

./: .env.example  .gitignore  README.md  matching_agent.py  pyproject.toml  worklog.md
.streamlit/: config.toml
data/chroma_db/: chroma.sqlite3
docs/: architecture.md  context.md  demo_script.md  demo_video_guide.md  implementation-plan.md  state_machine_diagram.mmd
scripts/: generate_sample_resumes.py  ingest_resumes.py
src/agent/: edges.py  graph.py  models.py  nodes.py  state.py
src/llm/: client.py
src/prompts/: comparison.py  explanation.py  extraction.py  intent.py  questions.py  scoring.py
src/rag/: indexer.py  retriever.py  store.py
src/reports/: match_report.py
src/scoring/: ranker.py  red_flags.py  scorer.py
src/screening/: __init__.py  pipeline.py  round1_initial.py  round2_deep.py  round3_final.py
src/tools/: compare_candidates.py  extract_requirements.py  file_tools.py  generate_questions.py  rag_search.py
tests/: test_agent_flows.py  test_conversation_flows.py  test_graph_linear.py  test_intent_classification.py  test_nodes.py  test_rag.py  test_screening.py  test_setup.py  test_state.py  test_tools.py  test_ui.py
tests/fixtures/: sample_jd.txt
tests/fixtures/expected_outputs/: README.md  expected_candidate_match_schema.json  expected_comparison_result_schema.json  expected_intent_routing.md  expected_match_report_sections.md  expected_requirements_schema.json  expected_screening_round_schema.json
ui/: cli_app.py  components.py  streamlit_app.py
